added users section

--- a/index.html
+++ b/index.html
@@ -24,6 +24,34 @@
 
         </header>
         <main>
+                <section class="action">
+                        <div class="action-content">
+                                <h3 class="section-title">See It in Action</h3>
+                                <p class="section-sub-title">Explore the live preview and imagine your <br> brand in this bold new look</p>
+                                <button class="primary-btn">Launch Live Preview</button>
+                        </div>
+                        <div class="action-img">
+                                <img src="Assets/wc-mini.png" alt="This is image.">
+                        </div>
+                </section>
+
+                <section class="users">
+                        <h3 class="section-title">Joined Thousands of Productive Users</h3>
+                        <div class="data-container">
+                                <div class="data">
+                                        <h3 class="data-title primary-inter-text">50K</h3>
+                                        <p class="data-sub-title section-sub-title">Active Users</p>
+                                </div>
+                                <div class="data">
+                                        <h3 class="data-title primary-inter-text">2M+</h3>
+                                        <p class="data-sub-title section-sub-title">Focus Sessions</p>
+                                </div>
+                                <div class="data">
+                                        <h3 class="data-title primary-inter-text">95%</h3>
+                                        <p class="data-sub-title section-sub-title">Satisfaction Rate</p>
+                                </div>
+                        </div>
+                </section>
 
         </main>
         <footer>
